agregue detalles sobre alt y ajuste fotos para mobile

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             
             <div class="cajaImagenPosteo">
-                    <img class="fotoPosteos" src="./img/entrenarDescalzos.jpg" alt="foto entrenar descalzo">
+                    <img class="fotoPosteos" src="./img/entrenarDescalzos.jpg" alt="entrenamiento descalzo grounding">
             </div>
             <div class="cajaTextoPosteo">
                     <h5>PIES DESCALZOS PARA ENTRENAR</h5>
@@ -102,17 +102,17 @@
             </div>
             <div class="cajaReviews">
                 <div class="review">
-                    <img src="./img/reviews1.png" alt="Testimonios de alumnos">
+                    <img src="./img/reviews1.png" alt="Reviews sobre Naturalflowmc">
                     <p>Encontrar a Naturalflowmc durante la cuarentena fue una de las mejores cosas que me han pasado! Después de una lesión de espalda y cadera hace años, había evitado tantas cosas (kettlebells, burpees, etc.). Naturalflowmc me libró del dolor, y me animó a probar cosas que creía imposibles. Estoy infinitamente agradecida.</p>
                     <p><strong>Juliana</strong></p>                                         
                 </div>    
                 <div class="review">
-                    <img src="./img/reviews1.png" alt="Testimonios de alumnos">
+                    <img src="./img/reviews1.png" alt="Reviews sobre Naturalflowmc">
                     <p>Naturalflowmc es la razón por la que soy más fuerte a los 30 años de lo que era como atleta a los 20. Me ayudó a liberarme del dolor después de mi segunda cirugía de espalda y a romper todas mis barreras mentales en torno al levantamiento de pesas con una lesión crónica. La comprensión del equipo de Naturalflowmc de lo que mi cuerpo necesitaba ha sido increíble.</p> 
                     <p><strong>Pablo</strong></p>          
                 </div>  
                 <div class="review">
-                    <img src="./img/reviews1.png" alt="Testimonios de alumnos">
+                    <img src="./img/reviews1.png" alt="Reviews sobre Naturalflowmc">
                     <p>Siempre he querido entrenar en Naturalflowmc desde que empecé a seguirlo en Instagram.  No sólo obtienes una experiencia práctica increíble, ¡también te diviertes! Ellos realmente quieren asegurarse de que el alumno está haciendo un movimiento correctamente de principio a fin para que no se lastime en cualquier momento.  No puedo agradecerle lo mucho que me ha enseñado este año. </p>
                     <p><strong>Jois</strong></p>
                 </div>      
