--- a/pages/blog.html
+++ b/pages/blog.html
@@ -90,7 +90,7 @@
         </section>
         <section class="cajaBlog">
             <div class="cajaImagenBlog">
-                <img class="fotoPosteos" src="../img/entrenamientoBiologicoEvolutivoBuenosAires.jpg" alt="foto entrenamiento biológico evolutivo Buenos Aires" >
+                <img class="fotoPosteos" src="../img/entrenamientoBiologicoEvolutivoBuenosAires.jpg" alt="entrenamiento biológico evolutivo Buenos Aires" >
             </div>
             <div class="cajaTituloYtextoBlog">   
                 <h4>ENTRENAMIENTO BIOLÓGICO EVOLUTIVO - POR QUÉ ES MEJOR</h4>
@@ -109,7 +109,7 @@
         </section>
         <section class="cajaBlog">
             <div class="cajaImagenBlog">
-                <img class="fotoPosteos" src="../img/tomografiaConeBeamBuenosAires.jpg" alt="foto salud dental" >
+                <img class="fotoPosteos" src="../img/tomografiaConeBeamBuenosAires.jpg" alt="salud dental cone beam" >
             </div>
             <div class="cajaTituloYtextoBlog">   
                 <h4>LO QUE TU MÉDICO TRADICIONAL NO SABE - TOMOGRAFÍA CONE BEAM</h4>
