--- a/pages/animalflow.html
+++ b/pages/animalflow.html
@@ -50,8 +50,8 @@
                 </nav>
         </div>
         <div class="fotoPortadaScorpion">
-            <section class="header1">          
-                     
+            <section class="header1">         
+                    
                 <div class="redesSociales">
                     <a href="https://www.instagram.com/reel/Cc-uw6DFscA/?utm_source=ig_web_copy_link" target="_blank"><img class="iconoInstagram" src="../img/instagram.png" alt="instagram" title="Ir a Instagram"></a>
                     <a href="https://www.facebook.com/rensocremonesi.ep" target="_blank"><img class="iconoFacebook" src="../img/facebook.png" alt="facebook" title="Ir a Facebook"></a>
@@ -112,13 +112,13 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner" title="Carousel de fotos Animal Flow">
                         <div class="carousel-item active">
-                            <img src="../img/cursoAnimalFlowBuenosAires1.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoAnimalFlowBuenosAires1.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso animal flow Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoAnimalFlowBuenosAires2.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoAnimalFlowBuenosAires2.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso animal flow Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoAnimalFlowBuenosAires3.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoAnimalFlowBuenosAires3.jpeg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso animal flow Buenos Aires">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
