--- a/pages/kettlebells.html
+++ b/pages/kettlebells.html
@@ -112,16 +112,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" title="Carousel de fotos Animal Flow">
                     <div class="carousel-item active">
-                        <img src="../img/cursoPesasRusasBuenosAires2.JPG" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                        <img src="../img/cursoPesasRusasBuenosAires2.JPG" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso pesas rusas Buenos Aires">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/cursoPesasRusasBuenosAires5.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                        <img src="../img/cursoPesasRusasBuenosAires5.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso pesas rusas Buenos Aires">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/cursoPesasRusasBuenosAires3.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                        <img src="../img/cursoPesasRusasBuenosAires3.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso pesas rusas Buenos Aires">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/cursoPesasRusasBuenosAires4.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                        <img src="../img/cursoPesasRusasBuenosAires4.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso pesas rusas Buenos Aires">
                     </div>                
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
