--- a/pages/nutricion.html
+++ b/pages/nutricion.html
@@ -112,59 +112,44 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner" title="Carousel de fotos Curso Nutrición">
                         <div class="carousel-item active">
-                            <img src="../img/cursoNutricionBuenosAires1.JPG" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires1.JPG" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires2.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires2.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires3.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires3.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires4.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires4.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires5.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires5.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>                    
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires7.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires7.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires8.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires8.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires9.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires9.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires10.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires10.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires11.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires11.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>                    
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires13.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires13.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires14.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
+                            <img src="../img/cursoNutricionBuenosAires14.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
                         </div>
                         <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires15.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires16.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires17.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires18.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires19.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/cursoNutricionBuenosAires20.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="...">
-                        </div>                    
+                            <img src="../img/cursoNutricionBuenosAires15.jpg" class="d-block w-90 carouselAnimalFlow img-fluid m-auto" alt="curso nutricion Buenos Aires">
+                        </div>                                                                  
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
