agregue boton curso kettlebells y corregi links de cursos a contacto

--- a/pages/animalflow.html
+++ b/pages/animalflow.html
@@ -106,7 +106,7 @@
                 </table>
             </section>
             <section class="reservarCurso">
-                <div class="divCalltoaction"><a  href="./pages/contacto.html"><h3 class="calltoaction calltoactionSmall">RESERVAR AHORA</h3></a></div> 
+                <div class="divCalltoaction"><a  href="../pages/contacto.html"><h3 class="calltoaction calltoactionSmall">RESERVAR AHORA</h3></a></div> 
             </section>
             <section class="carousel">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
