--- a/pages/kettlebells.html
+++ b/pages/kettlebells.html
@@ -105,8 +105,8 @@
                 </tbody>
             </table>
         </section>
-        <section>
-         
+        <section class="reservarCurso">
+            <div class="divCalltoaction"><a  href="../pages/contacto.html"><h3 class="calltoaction calltoactionSmall">RESERVAR AHORA</h3></a></div> 
         </section>
         <section class="carousel">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
