agragado de texto real parte 1

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -69,7 +70,7 @@
       <section class="cajaContacto">
         <h1>COMENZAR A ENTRENAR | INFORMACIÓN SOBRE CURSOS</h1>
         <section class="container">
-            <div class="row">
+            <div class="row fondoContacto">
                 <div class="col-xs-12 col-lg-6 letraPisaBootstrap">
                     <h3 class="letraPisaBootstrap">ESTAMOS PARA AYUDARTE</h3>
                     <form class="bg-warning-subtle p-5 m-auto border border border-2">
@@ -94,66 +95,69 @@
                       </form>
                 </div>
                 <div class="col-xs-12 col-lg-6 letraPisaBootstrap">
-                    <h3>PREGUNTAS FRECUENTES</h3>
+                    <h3 class="letraPisaBootstrap">PREGUNTAS FRECUENTES</h3>
                     <div class="accordion accordion-flush m-auto border border border-2 " id="accordionFlushExample">
-                        <div class="accordion-item">
+                        <div class="accordion-item letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed   bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                              ¿Quiénes pueden realizar este entrenamiento?
+                            Soy mayor y estoy fuera de forma. ¿Es esto realmente para mí?
                             </button>
                           </h2>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, doloribus distinctio modi perspiciatis nisi eos molestiae hic enim minima optio.</div>
+                            <div class="accordion-body">La respuesta simple es que Naturalflowmc es para ti si eres humano. Nos enfocamos en lograr que optimices la precisión de los primeros cuatro patrones de movimiento, es decir, pararse, caminar, correr y lanzar. No importa quién eres o tu edad o nivel de condición física.</div>
                           </div>
                         </div>
-                        <div class="accordion-item">
+                        <div class="accordion-item  letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                              ¿Realizan entrenamientos personalizados?
+                              ¿Puede esto ayudar a recuperarme de una lesión?
                             </button>
                           </h2>
                           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci numquam voluptates sint ratione aliquid eos perspiciatis voluptatibus, vero veniam cupiditate?</div>
+                            <div class="accordion-body">Hemos ayudado a 500 personas a superar los dolores crónicos y recuperar la funcionalidad de su cuerpo aprendiendo a moverse mejor. En lugar de centrarse en los síntomas individuales, Naturalflowmc busca la causa raíz de los desequilibrios que impiden el funcionamiento óptimo del sistema. Cuando tu objetivo es encontrar el equilibrio con el movimiento, el ejercicio y la exposición ambiental, construyes la base para salir de la degeneración y entrar en la regeneración.
+                            </div>
                           </div>
                         </div>
-                        <div class="accordion-item">
+                        <div class="accordion-item  letraPisaBootstrap">
                           <h2 class="accordion-header" id="flush-headingThree">
                             <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                               Días y horarios de entrenamientos
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia excepturi repudiandae harum quo rerum iure sapiente doloribus ex aliquam incidunt.</div>
+                            <div class="accordion-body">De lunes a viernes, existen horarios por la mañana y por la tarde. Los entrenamientos pueden ser personalizados, semipersonalizados, o grupales. Contacta con nosotros para recibir la grilla de horarios actualizada</div>
                           </div>
                         </div>
-                        <div class="accordion-item">
+                        <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingFour">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                                ¿Realizan entrenamientos de manera online?
+                                ¿En Naturalflowmc, se construye músculo?
                               </button>
                             </h2>
                             <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                              <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia excepturi repudiandae harum quo rerum iure sapiente doloribus ex aliquam incidunt.</div>
+                              <div class="accordion-body">¡Absolutamente! Aunque en Naturalflowmc, te enseñamos cómo construir músculo en los lugares correctos de tu cuerpo y mantenerlo allí para siempre. A menudo, las personas desarrollarán músculo por el bien de desarrollar músculo. Los músculos evolucionaron para realizar funciones específicas, por lo que cuando puedes agregar músculo que cumple una función específica, obtienes un mejor funcionamiento y un músculo de aspecto más estético.
+                              </div>
                             </div>
                           </div>
-                          <div class="accordion-item">
+                          <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingFive">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                ¿Qué son los patrones funcionales?
                               </button>
                             </h2>
                             <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                              <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia excepturi repudiandae harum quo rerum iure sapiente doloribus ex aliquam incidunt.</div>
+                              <div class="accordion-body"> Al centrarnos en entrenar el cuerpo de acuerdo con cómo evolucionó para moverse, somos más conocidos por nuestros resultados que mejoran el rendimiento humano en múltiples frentes, desde atletismo, pérdida de peso, construcción muscular, dolor de rodilla y dolor de cadera y trastornos neurodegenerativos y más.</div>
                             </div>
                           </div>
-                          <div class="accordion-item">
+                          <div class="accordion-item  letraPisaBootstrap">
                             <h2 class="accordion-header" id="flush-headingSix">
                               <button class="accordion-button collapsed bg-warning-subtle" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                ¿Esto me hará más fuerte, más en forma y más delgado?
                               </button>
                             </h2>
                             <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
-                              <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia excepturi repudiandae harum quo rerum iure sapiente doloribus ex aliquam incidunt.</div>
+                              <div class="accordion-body">En Naturalflowmc, nos gusta decir que el fitness es el resultado de un buen movimiento. Lo que significa que si puede moverse correctamente y desarrollar habilidades como la postura de pie activamente comprometida y una buena mecánica para caminar, correr y lanzar, esto se trasladará para permitirle desarrollar una fuerza y resistencia reales y explosivas de manera natural que se aplicarán a todo lo que hace en la vida. Con una práctica constante, definitivamente se pondrá en forma, fuerte y delgado, especialmente si la nutrición adecuada es parte de su régimen de salud y acondicionamiento físico.
+                              </div>
                             </div>
                           </div>
                       </div>
